service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-server
spec:
  selector:
    app: traffic-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
