traffic-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-server
  template:
    metadata:
      labels:
        app: traffic-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
        prometheus.io/path: "/metrics"

    spec:
      containers:
      - name: traffic-server
        image: fawetah1/traffic-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: traffic-server
spec:
  selector:
    app: traffic-server
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
