traffic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traffic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: traffic.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traffic-server
            port:
              number: 5000
